@@ -238,7 +238,7 @@ int R_nchar(SEXP string, nchar_type type_, Rboolean allowNA, Rboolean keepNA, co
 
 SEXP attribute_hidden do_nchar(SEXP call, SEXP op, SEXP args, SEXP env)
 {
-    SEXP d, s, x, stype;
+    SEXP d, s, x, stype, ans;
     int nargs = length(args);
 
 #ifdef R_version_3_4_or_so
@@ -250,6 +250,8 @@ SEXP attribute_hidden do_nchar(SEXP call, SEXP op, SEXP args, SEXP env)
                        "%d arguments passed to '%s' which requires %d to %d", (unsigned long)nargs),
               nargs, PRIMNAME(op), 3, 4);
 #endif
+    if (DispatchOrEval(call, op, "nchar", args, env, &ans, 0, 1))
+        return (ans);
     if (isFactor(CAR(args)))
         error(_("'%s' requires a character vector"), "nchar()");
     PROTECT(x = coerceVector(CAR(args), STRSXP));
