@@ -24,7 +24,8 @@
       \item \code{removeSource()} now works not only for functions but
       also for some language objects.
 
-      \item \code{as.call()} dispatches internally.
+      \item \code{as.call()}, \code{rep.int()}, \code{rep_len()} and
+      \code{nchar()} dispatch internally.
 
       \item \code{is(object, class2)} looks for \code{class2} in the
       calling namespace after looking in the namespace of
